syntax = "proto3";

package pb;

option go_package = "user-service/pb";

message ForgotPasswordRequest{
    string email = 1;
}

message ForgotPasswordResponse{
    string message = 1;
}